Update Page layout in index.html

--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
         <span class="letter grey" data-letter="U">U</span>
         <span class="letter grey" data-letter="T">T</span>
       </div>
+      <p>
+        <a id="about-nav">ABOUT</a>/
+        <a id="work-nav">WORK</a>/
+        <a id="contact-nav">CONTACT</a>
+      </p>
     </div>
     <div class="subsection-white">
       <div class="about">
@@ -118,17 +123,22 @@
             <div class="subtitle">
               WELCOME
             </div>
-            Ayyy hello! Looks like someone stumble upon my crumb trail! <br />
+            Ayyy hello!  <br />
             Welcome to my personal site - a window I've built to showcase my work, my skills and who I am. Go ahead and check it out, I hope you enjoy the tour and get to learn a little more about me in the process. <br /><br />
             <div class="subtitle">
               WHO I AM
             </div>
             <strong>I'm a computer engineering student at the Universtiy of Waterloo who loves exciting tech, delicious food and badminton. </strong><br />
-            I enjoy solving problems, coming up with <a href="https://www.youtube.com/watch?v=ARrr4cOuzj0">strategic</a> and creative solutions to <br />
+            I enjoy coming up with <a href="https://www.youtube.com/watch?v=ARrr4cOuzj0">strategic</a> and creative solutions to solve interesting problems.<br /><br />
+            <div class="subtitle">
+              WHAT I'M UP TO
+            </div>
+            Right now I'm working as an NLP engineer at <a href="https://www.admithub.com/">Admithub</a> @ Harvard Launch Lab in Boston! Our machine learning stack used to process and recognize the users' questions is built with Python (along with a lot of its machine learning packages). We use Keras, Tensorflow, Numpy, Spacy, NLTK etc... to implement a language processing model that pushes the boundaries of a state of the art NLP matching engine that is both <a href="http://67.media.tumblr.com/fe2b200de84c7fe115d6a4a1f10cf8b9/tumblr_ns2ncl7B6J1sgl0ajo1_400.gif">precise</a> and <a href="https://media.giphy.com/media/UGoctv1h5huJW/giphy.gif">efficient</a>.
           </p>
         </div>
       </div>
     </div>
+    <div class="arrow"></div>
     <div class="clear"></div>
   </section>
   <section id="work" class="section-wrapper">
@@ -139,6 +149,11 @@
         <span class="letter--black blue" data-letter="R">R</span>
         <span class="letter--black blue" data-letter="K">K</span>
       </div>
+      <p>
+        <a id="about-nav">ABOUT</a>/
+        <a id="work-nav">WORK</a>/
+        <a id="contact-nav">CONTACT</a>
+      </p>
     </div>
     <div class="subsection-orange">
       <div class="content">
@@ -148,7 +163,7 @@
     <div class="clear"></div>
   </section>
   <section id="contact" class="section-wrapper">
-    <div class="subsection-grey">
+    <div class="subsection-contact">
       <div class="title">
         <span class="letter orange" data-letter="C">C</span>
         <span class="letter orange" data-letter="O">O</span>
@@ -158,6 +173,11 @@
         <span class="letter orange" data-letter="C">C</span>
         <span class="letter orange" data-letter="T">T</span>
       </div>
+      <p class="white">
+        <a id="about-nav">ABOUT</a>/
+        <a id="work-nav">WORK</a>/
+        <a id="contact-nav">CONTACT</a>
+      </p>
     </div>
     <div class="subsection-white">
       <div class="contact">
