Add work section content

--- a/index.html
+++ b/index.html
@@ -156,9 +156,10 @@
       </p>
     </div>
     <div class="subsection-orange">
-      <div class="content">
-        <h1>Work-Content</h1>
-      </div>
+      <div id=watchr><div>Watchr</div></div>
+      <div id=findit><div>FindIt</div></div>
+      <div id=clarifind><div>Clarifind</div></div>
+      <div id=uwatm8><div>UWATM8</div></div>
     </div>
     <div class="clear"></div>
   </section>
