Include Gulp in dev cycle, clean up small issues gitignore to include DS_Store and npm files
setup gulp to streamline dev process

add nom dev packages for gulp

Update Readme to include gulp

Remove headroom.js dependency

Remove redundant init for typer function

Update sass syntactic spaces after :

--- a/index.html
+++ b/index.html
@@ -217,11 +217,12 @@
     <div class="clear"></div>
   </section>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/jquery.typeit/4.2.3/typeit.min.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/jquery.typeit/4.2.3/typeit.min.js"></script> -->
   <script src="assets/javascript/typer.js"></script>
-  <script src="assets/javascript/headroom.js"></script>
+  <!-- <script src="assets/javascript/headroom.js"></script> -->
   <script src="assets/javascript/main.js"></script>
   <script src="assets/javascript/instaclick.js" data-no-instant></script>
   <script data-no-instant>InstantClick.init();</script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 </body>
 </html>
