Separate Matthew and Tse into two divs Displays better when resized to a smaller width

--- a/index.html
+++ b/index.html
@@ -52,10 +52,6 @@
   <!-- <link rel="stylesheet" href="assets/stylesheets/pesticide.css"> -->
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css" />
   <!-- <link rel="stylesheet" type="text/css" href="assets/stylesheets/font-awesome.min.css" /> -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-  <!-- Latest compiled and minified CSS -->
-<!--
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script> -->
 
 </head>
 <body>
@@ -72,16 +68,21 @@
     <div class="subsection intro">
       <div class="title">
         <!-- <h1>Matthew Tse</h1> -->
-        <span class="letter--black blue" data-letter="M">M</span>
-        <span class="letter--black blue" data-letter="A">A</span>
-        <span class="letter--black blue" data-letter="T">T</span>
-        <span class="letter--black blue" data-letter="T">T</span>
-        <span class="letter--black blue" data-letter="H">H</span>
-        <span class="letter--black blue" data-letter="E">E</span>
-        <span class="letter--black blue" data-letter="W">W</span>
-        <span class="letter--black blue" data-letter="T">T</span>
-        <span class="letter--black blue" data-letter="S">S</span>
-        <span class="letter--black blue" data-letter="E">E</span>
+        <div>
+          <span class="letter--black blue" data-letter="M">M</span>
+          <span class="letter--black blue" data-letter="A">A</span>
+          <span class="letter--black blue" data-letter="T">T</span>
+          <span class="letter--black blue" data-letter="T">T</span>
+          <span class="letter--black blue" data-letter="H">H</span>
+          <span class="letter--black blue" data-letter="E">E</span>
+          <span class="letter--black blue" data-letter="W">W</span>
+        </div>
+        <div>
+          <span class="letter--black blue" data-letter="T">T</span>
+          <span class="letter--black blue" data-letter="S">S</span>
+          <span class="letter--black blue" data-letter="E">E</span>
+        </div>
+
         <p class="typer" data-typer-targets='{"targets":[
         "web design · front-end development",
         "ux design · front-end development",
@@ -110,7 +111,7 @@
         <span class="letter grey" data-letter="U">U</span>
         <span class="letter grey" data-letter="T">T</span>
       </div>
-      <p>
+      <p class="white">
         <a id="about-nav">ABOUT</a>/
         <a id="work-nav">WORK</a>/
         <a id="contact-nav">CONTACT</a>
