Update responsiveness for mobile with flex-box

--- a/index.html
+++ b/index.html
@@ -97,13 +97,36 @@
         "scalable design · back-end development",
         "web design · back-end development"
         ]}'></p>
-
+      </div>
+      <div class="icons-list">
+        <ul class='social'>
+          <li class='linkedin'>
+            <a href="https://www.linkedin.com/in/mcotse?trk=nav_responsive_tab_profile">
+              <i class='fa fa-lg fa-linkedin'></i>
+            </a>
+          </li>
+          <li class='github'>
+            <a href="https://github.com/mcotse">
+              <i class='fa fa-lg fa-github'></i>
+            </a>
+          </li>
+          <li class='instagram'>
+            <a href="https://www.instagram.com/itsmatthewtyo/">
+              <i class='fa fa-lg fa-instagram'></i>
+            </a>
+          </li>
+          <li class='facebook'>
+            <a href="https://www.facebook.com/mcotse">
+              <i class='fa fa-lg fa-facebook-official'></i>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
     <div class="clear"></div>
   </section>
   <section id="about" class="section-wrapper">
-    <div class="subsection-blue">
+    <div class="subsection-about subsection-title">
       <div class="title">
         <span class="letter grey" data-letter="A">A</span>
         <span class="letter grey" data-letter="B">B</span>
@@ -143,7 +166,7 @@
     <div class="clear"></div>
   </section>
   <section id="work" class="section-wrapper">
-    <div class="subsection-white">
+    <div class="subsection-white subsection-work subsection-title">
       <div class="title">
         <span class="letter--black blue" data-letter="W">W</span>
         <span class="letter--black blue" data-letter="O">O</span>
