Set nav as class and fix nav items animation
Remove headroom.js dependency

--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
         <span class="letter grey" data-letter="U">U</span>
         <span class="letter grey" data-letter="T">T</span>
       </div>
-      <p class="white">
-        <a id="about-nav">ABOUT</a>/
-        <a id="work-nav">WORK</a>/
-        <a id="contact-nav">CONTACT</a>
+      <p class="white nav">
+        <a class="about-nav">ABOUT</a>/
+        <a class="work-nav">WORK</a>/
+        <a class="contact-nav">CONTACT</a>
       </p>
     </div>
     <div class="subsection-white">
@@ -173,10 +173,10 @@
         <span class="letter--black blue" data-letter="R">R</span>
         <span class="letter--black blue" data-letter="K">K</span>
       </div>
-      <p>
-        <a id="about-nav">ABOUT</a>/
-        <a id="work-nav">WORK</a>/
-        <a id="contact-nav">CONTACT</a>
+      <p class="nav">
+        <a class="about-nav">ABOUT</a>/
+        <a class="work-nav">WORK</a>/
+        <a class="contact-nav">CONTACT</a>
       </p>
     </div>
     <div class="subsection-orange">
@@ -198,10 +198,10 @@
         <span class="letter orange" data-letter="C">C</span>
         <span class="letter orange" data-letter="T">T</span>
       </div>
-      <p class="white">
-        <a id="about-nav">ABOUT</a>/
-        <a id="work-nav">WORK</a>/
-        <a id="contact-nav">CONTACT</a>
+      <p class="white nav">
+        <a class="about-nav">ABOUT</a>/
+        <a class="work-nav">WORK</a>/
+        <a class="contact-nav">CONTACT</a>
       </p>
     </div>
     <div class="subsection-white">
