--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
           <span class="letter--black blue" data-letter="T">T</span>
           <span class="letter--black blue" data-letter="H">H</span>
           <span class="letter--black blue" data-letter="E">E</span>
-          <span class="letter--black blue" data-letter="W">W</span>
+          <span class="letter-lifted--black blue" data-letter="W">W</span>
         </div>
         <div>
           <span class="letter--black blue" data-letter="T">T</span>
           <span class="letter--black blue" data-letter="S">S</span>
-          <span class="letter--black blue" data-letter="E">E</span>
+          <span class="letter-lifted--black blue" data-letter="E">E</span>
         </div>
 
         <p class="typer" data-typer-targets='{"targets":[
@@ -132,7 +132,7 @@
         <span class="letter grey" data-letter="B">B</span>
         <span class="letter grey" data-letter="O">O</span>
         <span class="letter grey" data-letter="U">U</span>
-        <span class="letter grey" data-letter="T">T</span>
+        <span class="letter-lifted grey" data-letter="T">T</span>
       </div>
       <p class="white nav">
         <a class="about-nav">ABOUT</a>/
@@ -171,7 +171,7 @@
         <span class="letter--black blue" data-letter="W">W</span>
         <span class="letter--black blue" data-letter="O">O</span>
         <span class="letter--black blue" data-letter="R">R</span>
-        <span class="letter--black blue" data-letter="K">K</span>
+        <span class="letter-lifted--black blue" data-letter="K">K</span>
       </div>
       <p class="nav">
         <a class="about-nav">ABOUT</a>/
@@ -190,13 +190,13 @@
   <section id="contact" class="section-wrapper">
     <div class="subsection-contact">
       <div class="title">
-        <span class="letter orange" data-letter="C">C</span>
-        <span class="letter orange" data-letter="O">O</span>
-        <span class="letter orange" data-letter="N">N</span>
-        <span class="letter orange" data-letter="T">T</span>
-        <span class="letter orange" data-letter="A">A</span>
-        <span class="letter orange" data-letter="C">C</span>
-        <span class="letter orange" data-letter="T">T</span>
+        <span class="letter purple" data-letter="C">C</span>
+        <span class="letter purple" data-letter="O">O</span>
+        <span class="letter purple" data-letter="N">N</span>
+        <span class="letter purple" data-letter="T">T</span>
+        <span class="letter purple" data-letter="A">A</span>
+        <span class="letter purple" data-letter="C">C</span>
+        <span class="letter-lifted purple" data-letter="T">T</span>
       </div>
       <p class="white nav">
         <a class="about-nav">ABOUT</a>/
