Apply link hover style on work subsection

--- a/index.html
+++ b/index.html
@@ -55,15 +55,6 @@
 
 </head>
 <body>
-  <!-- <header class="header">
-    <div class="container">
-      <a id="about-nav">ABOUT</a>
-      <slash>/</slash>
-      <a id="work-nav">WORK</a>
-      <slash>/</slash>
-      <a id="contact-nav">CONTACT</a>
-    </div>
-  </header> -->
   <section id="intro" class="section-wrapper">
     <div class="subsection intro">
       <div class="title">
@@ -134,7 +125,7 @@
         <span class="letter grey" data-letter="U">U</span>
         <span class="letter-lifted grey" data-letter="T">T</span>
       </div>
-      <p class="white nav">
+      <p class="white nav underline-hover">
         <a class="about-nav">ABOUT</a>/
         <a class="work-nav">WORK</a>/
         <a class="contact-nav">CONTACT</a>
@@ -173,17 +164,17 @@
         <span class="letter--black blue" data-letter="R">R</span>
         <span class="letter-lifted--black blue" data-letter="K">K</span>
       </div>
-      <p class="nav">
+      <p class="nav underline-hover">
         <a class="about-nav">ABOUT</a>/
         <a class="work-nav">WORK</a>/
         <a class="contact-nav">CONTACT</a>
       </p>
     </div>
-    <div class="subsection-orange">
-      <div id=watchr><div>Watchr</div></div>
-      <div id=findit><div>FindIt</div></div>
-      <div id=clarifind><div>Clarifind</div></div>
-      <div id=uwatm8><div>UWATM8</div></div>
+    <div class="subsection-orange underline-hover-thick">
+      <div id="watchr"><div><a>Watchr</a></div></div>
+      <div id="findit"><div><a>FindIt</a></div></div>
+      <div id="clarifind"><div><a>Clarifind</a></div></div>
+      <div id="uwatm8"><div><a>UWATM8</a></div></div>
     </div>
     <div class="clear"></div>
   </section>
@@ -198,7 +189,7 @@
         <span class="letter purple" data-letter="C">C</span>
         <span class="letter-lifted purple" data-letter="T">T</span>
       </div>
-      <p class="white nav">
+      <p class="white nav underline-hover">
         <a class="about-nav">ABOUT</a>/
         <a class="work-nav">WORK</a>/
         <a class="contact-nav">CONTACT</a>
