Offsetting the subsections to 3:2 width ratio Tentative to revert back to 1:1

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <div class="clear"></div>
   </section>
   <section id="about" class="section-wrapper">
-    <div class="subsection-about subsection-title">
+    <div class="subsection-about subsection-title flex-3">
       <div class="title">
         <span class="letter grey" data-letter="A">A</span>
         <span class="letter grey" data-letter="B">B</span>
@@ -131,7 +131,7 @@
         <a class="contact-nav">CONTACT</a>
       </p>
     </div>
-    <div class="subsection-white">
+    <div class="subsection-white flex-2">
       <div class="about">
         <div class="text">
           <p>
@@ -157,7 +157,7 @@
     <div class="clear"></div>
   </section>
   <section id="work" class="section-wrapper">
-    <div class="subsection-white subsection-work subsection-title">
+    <div class="subsection-white subsection-work subsection-title flex-2">
       <div class="title">
         <span class="letter--black blue" data-letter="W">W</span>
         <span class="letter--black blue" data-letter="O">O</span>
@@ -170,7 +170,7 @@
         <a class="contact-nav">CONTACT</a>
       </p>
     </div>
-    <div class="subsection-orange underline-hover-thick">
+    <div class="subsection-orange underline-hover-thick flex-3">
       <div id="watchr"><div><a>Watchr</a></div></div>
       <div id="findit"><div><a>FindIt</a></div></div>
       <div id="clarifind"><div><a>Clarifind</a></div></div>
@@ -179,7 +179,7 @@
     <div class="clear"></div>
   </section>
   <section id="contact" class="section-wrapper">
-    <div class="subsection-contact">
+    <div class="subsection-contact flex-3">
       <div class="title">
         <span class="letter purple" data-letter="C">C</span>
         <span class="letter purple" data-letter="O">O</span>
@@ -195,7 +195,7 @@
         <a class="contact-nav">CONTACT</a>
       </p>
     </div>
-    <div class="subsection-white">
+    <div class="subsection-white flex-2">
       <div class="contact">
         <div class="subtitle">
           FIND ME
