Add flex grow effect to work item on hover

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <div class="clear"></div>
   </section>
   <section id="about" class="section-wrapper">
-    <div class="subsection-about subsection-title flex-3">
+    <div class="subsection-about subsection-title">
       <div class="title">
         <span class="letter grey" data-letter="A">A</span>
         <span class="letter grey" data-letter="B">B</span>
@@ -131,7 +131,7 @@
         <a class="contact-nav">CONTACT</a>
       </p>
     </div>
-    <div class="subsection-white flex-2">
+    <div class="subsection-white">
       <div class="about">
         <div class="text">
           <p>
@@ -157,7 +157,7 @@
     <div class="clear"></div>
   </section>
   <section id="work" class="section-wrapper">
-    <div class="subsection-white subsection-work subsection-title flex-2">
+    <div class="subsection-white subsection-work subsection-title">
       <div class="title">
         <span class="letter--black blue" data-letter="W">W</span>
         <span class="letter--black blue" data-letter="O">O</span>
@@ -170,16 +170,16 @@
         <a class="contact-nav">CONTACT</a>
       </p>
     </div>
-    <div class="subsection-orange underline-hover-thick flex-3">
-      <div id="watchr"><div><a>Watchr</a></div></div>
-      <div id="findit"><div><a>FindIt</a></div></div>
-      <div id="clarifind"><div><a>Clarifind</a></div></div>
-      <div id="uwatm8"><div><a>UWATM8</a></div></div>
+    <div class="subsection-orange underline-hover-thick">
+      <div id="watchr" class="zoom"><div><a>Watchr</a></div></div>
+      <div id="findit" class="zoom"><div><a>FindIt</a></div></div>
+      <div id="clarifind" class="zoom"><div><a>Clarifind</a></div></div>
+      <div id="uwatm8" class="zoom"><div><a>UWATM8</a></div></div>
     </div>
     <div class="clear"></div>
   </section>
   <section id="contact" class="section-wrapper">
-    <div class="subsection-contact flex-3">
+    <div class="subsection-contact">
       <div class="title">
         <span class="letter purple" data-letter="C">C</span>
         <span class="letter purple" data-letter="O">O</span>
@@ -195,7 +195,7 @@
         <a class="contact-nav">CONTACT</a>
       </p>
     </div>
-    <div class="subsection-white flex-2">
+    <div class="subsection-white">
       <div class="contact">
         <div class="subtitle">
           FIND ME
