--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
         </ul>
       </div>
     </div>
+    <div class="arrow"></div>
     <div class="clear"></div>
   </section>
   <section id="about" class="section-wrapper">
@@ -141,26 +142,29 @@
     <div class="subsection-white">
       <div class="about">
         <div class="text">
-          <p>
-            <div class="subtitle">
+          <!-- <p> -->
+            <!-- <div class="subtitle">
               WELCOME
             </div>
             Ayyy hello!  <br />
-            Welcome to my personal site - a window I've built to showcase my work, my skills and who I am. Go ahead and check it out, I hope you enjoy the tour and get to learn a little more about me in the process. <br /><br />
+            Welcome to my personal site - a window I've built to showcase my work, my skills and who I am. Go ahead and check it out, I hope you enjoy the tour and get to learn a little more about me in the process. <br /><br /> -->
             <div class="subtitle">
-              WHO I AM
+                WHO I AM
             </div>
-            <strong>I'm a computer engineering student at the Universtiy of Waterloo who loves exciting tech, delicious food and badminton. </strong><br />
+            Computer Engineering Diciple @ UWaterloo.<br />
+            <br/>
+            Love exciting tech 🤖<br/>
+            Passionate about making and eating food 🍜<br/>
+            Crazy for badmiton 🏸</br/><br/>
             I enjoy coming up with <a href="https://www.youtube.com/watch?v=ARrr4cOuzj0">strategic</a> and creative solutions to solve interesting problems.<br /><br />
             <div class="subtitle">
               WHAT I'M UP TO
             </div>
-            Right now I'm working as an NLP engineer at <a href="https://www.admithub.com/">Admithub</a> @ Harvard Launch Lab in Boston! Our machine learning stack used to process and recognize the users' questions is built with Python (along with a lot of its machine learning packages). We use Keras, Tensorflow, Numpy, Spacy, NLTK etc... to implement a language processing model that pushes the boundaries of a state of the art NLP matching engine that is both <a href="http://67.media.tumblr.com/fe2b200de84c7fe115d6a4a1f10cf8b9/tumblr_ns2ncl7B6J1sgl0ajo1_400.gif">precise</a> and <a href="https://media.giphy.com/media/UGoctv1h5huJW/giphy.gif">efficient</a>.
-          </p>
+            Current NLP engineer @ <a href="https://www.admithub.com/">Admithub</a>, Harvard Launch Lab.
+          <!-- </p> -->
         </div>
       </div>
     </div>
-    <div class="arrow"></div>
     <div class="clear"></div>
   </section>
   <section id="work" class="section-wrapper">
@@ -205,10 +209,9 @@
     <div class="subsection-white">
       <div class="contact">
         <div class="subtitle">
-          FIND ME
+          DATA-MINDING OPPORTUNITIES
         </div>
         <div class="text">
-          If you want to find out more about me, feel free to follow one of these links! ...or check them all out, if data-mining is your thing...
         </div>
         <div class="icons-list">
           <ul class='social'>
