Capitalize tagline subtitles

--- a/index.html
+++ b/index.html
@@ -81,18 +81,18 @@
         </div>
 
         <p class="typer" data-typer-targets='{"targets":[
-        "web design · front-end development",
-        "ux design · front-end development",
-        "responsive design · front-end development",
-        "responsive design · mobile development",
-        "interactive design · mobile development",
-        "interactive design · chat-bot development",
-        "responsive design · chat-bot development",
-        "responsive design · object-oriented development",
-        "creative design · object-oriented development",
-        "scalable design · object-oriented development",
-        "scalable design · back-end development",
-        "web design · back-end development"
+        "Web Design · Front-End Development",
+        "UX Design · Front-End Development",
+        "Responsive Design · Front-End Development",
+        "Responsive Design · Mobile Development",
+        "Interactive Design · Mobile Development",
+        "Interactive Design · Chat-Bot Development",
+        "Responsive Design · Chat-Bot Development",
+        "Responsive Design · Object-Oriented Development",
+        "Creative Design · Object-Oriented Development",
+        "Scalable Design · Object-Oriented Development",
+        "Scalable Design · Back-End Development",
+        "Web Design · Back-End Development"
         ]}'></p>
       </div>
       <div class="icons-list">
