Add links to projects, along with syling

--- a/index.html
+++ b/index.html
@@ -180,11 +180,34 @@
         <a class="contact-nav">CONTACT</a>
       </p>
     </div>
-    <div class="subsection-orange underline-hover-thick">
-      <div id="watchr" class="zoom"><div><a>Watchr</a></div></div>
-      <div id="findit" class="zoom"><div><a>FindIt</a></div></div>
-      <div id="clarifind" class="zoom"><div><a>Clarifind</a></div></div>
-      <div id="uwatm8" class="zoom"><div><a>UWATM8</a></div></div>
+    <div class="subsection-orange">
+      <div id="watchr" class="zoom">
+          <div><a class="work-title">Watchr</a></div>
+          <div>
+              <div class="plink"><a href="https://github.com/marwanad/Watchr">Gitub</a></div>
+              <div class="plink"><a href="https://devpost.com/software/watchr-1s3cqu">Devpost</a></div>
+          </div>
+      </div>
+      <div id="findit" class="zoom">
+          <div class="work-title"><a>FindIt</a></div>
+          <div>
+              <div class="plink"><a href="https://github.com/mcotse/FindIt">Gitub</a></div>
+              <div class="plink"><a href="https://devpost.com/software/spotlight-ui82jm">Devpost</a></div>
+          </div>
+      </div>
+      <div id="clarifind" class="zoom">
+          <div class="work-title"><a>Clarifind</a></div>
+          <div>
+              <div class="plink"><a href="https://github.com/xmfan/clarifind">Gitub</a></div>
+              <div class="plink"><a href="https://devpost.com/software/clarifind">Devpost</a></div>
+          </div>
+      </div>
+      <div id="uwatm8" class="zoom">
+          <div class="work-title"><a>UWATM8</a></div>
+          <div>
+              <div class="plink"><a href="https://github.com/mcotse/Uwatm8">Gitub</a></div>
+          </div>
+      </div>
     </div>
     <div class="clear"></div>
   </section>
