--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <br/>
             Love exciting tech 🤖<br/>
             Passionate about making and eating food 🍜<br/>
-            Crazy for badmiton 🏸</br/><br/>
+            Crazy for badminton 🏸</br/><br/>
             I enjoy coming up with <a href="https://www.youtube.com/watch?v=ARrr4cOuzj0">strategic</a> and creative solutions to solve interesting problems.<br /><br />
             <div class="subtitle">
               WHAT I'M UP TO
