Update Projects (work) with latest and add tag lines

--- a/index.html
+++ b/index.html
@@ -150,7 +150,9 @@
             <div class="subtitle">
                 WHO I AM
             </div>
-            Computer Engineering Diciple @ UWaterloo.<br />
+            Current Computer Engineering Diciple @ uWaterloo class of '17</br>
+            Past NLP engineer @ <a href="https://www.admithub.com/">Admithub</a>, Harvard Launch Lab.
+            <br/>
             <br/>
             Love exciting tech 🤖<br/>
             Passionate about making and eating food 🍜<br/>
@@ -159,7 +161,7 @@
             <div class="subtitle">
               WHAT I'M UP TO
             </div>
-            Current NLP engineer @ <a href="https://www.admithub.com/">Admithub</a>, Harvard Launch Lab.
+            Finishing up my last term at uWaterloo 🙏
           <!-- </p> -->
         </div>
       </div>
@@ -181,8 +183,17 @@
       </p>
     </div>
     <div class="subsection-orange">
+      <div id="scout" class="zoom">
+          <div class="work-title"><a>Scout</a></div>
+          <div class="tag-line">Emotional Data Analytics</div>
+          <div>
+              <div class="plink"><a href="https://github.com/jsshao/hackthevalley">Gitub</a></div>
+              <div class="plink"><a href="https://devpost.com/software/scout-rb3gej">Devpost</a></div>
+          </div>
+      </div>
       <div id="watchr" class="zoom">
           <div><a class="work-title">Watchr</a></div>
+          <div class="tag-line">Real Time Crisis Management</div>
           <div>
               <div class="plink"><a href="https://github.com/marwanad/Watchr">Gitub</a></div>
               <div class="plink"><a href="https://devpost.com/software/watchr-1s3cqu">Devpost</a></div>
@@ -190,22 +201,17 @@
       </div>
       <div id="findit" class="zoom">
           <div class="work-title"><a>FindIt</a></div>
+          <div class="tag-line">Store Navigation Assistant</div>
           <div>
               <div class="plink"><a href="https://github.com/mcotse/FindIt">Gitub</a></div>
               <div class="plink"><a href="https://devpost.com/software/spotlight-ui82jm">Devpost</a></div>
           </div>
       </div>
-      <div id="clarifind" class="zoom">
-          <div class="work-title"><a>Clarifind</a></div>
+      <div id="uwparkingbot" class="zoom">
+          <div class="work-title"><a>UW Parking Bot</a></div>
+          <div class="tag-line">Parking Availability Chatbot</div>
           <div>
-              <div class="plink"><a href="https://github.com/xmfan/clarifind">Gitub</a></div>
-              <div class="plink"><a href="https://devpost.com/software/clarifind">Devpost</a></div>
-          </div>
-      </div>
-      <div id="uwatm8" class="zoom">
-          <div class="work-title"><a>UWATM8</a></div>
-          <div>
-              <div class="plink"><a href="https://github.com/mcotse/Uwatm8">Gitub</a></div>
+              <div class="plink"><a href="https://www.facebook.com/uwparkinglots/">Facebook</a></div>
           </div>
       </div>
     </div>
