--- a/index.html
+++ b/index.html
@@ -277,5 +277,15 @@
   <script src="assets/javascript/instaclick.js" data-no-instant></script>
   <script data-no-instant>InstantClick.init();</script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-73544724-1', 'auto');
+  ga('send', 'pageview');
+
+  </script>
 </body>
 </html>
