--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
   <!--Optional Meta Tags-->
   <meta name="distribution" content="web">
-  <meta name="web_author" content="Rafayel Mkrtchyan">
+  <meta name="web_author" content="Matthew Tse">
   <meta name="rating" content="general">
   <meta name="rating" content="safe for kids">
   <meta name="subject" content="Personal">
-  <meta name="title" content="Rafayel Mkrtchyan - Official Website.">
-  <meta name="copyright" content="Copyright 2016">
+  <meta name="title" content="Matthew Tse - Official Website.">
+  <meta name="copyright" content="Copyright 2017">
   <meta name="reply-to" content="mcotse@uwaterloo.ca">
-  <meta name="abstract" content="Matthew Tse is an IT strategist, with over 3 years of experience, including software engineering, project management, product development, business operations, and strategy.">
+  <meta name="abstract" content="Matthew Tse is an IT strategist and developer, with over 3 years of experience, including software engineering, project management, product development, business operations, and strategy.">
   <meta name=”city” content=”Toronto”>
   <meta name=”country” content=”Canada”>
   <meta name="distribution" content="global">
