Add footer and email

--- a/index.html
+++ b/index.html
@@ -265,6 +265,18 @@
             </li>
           </ul>
   			</div>
+        <br />
+        <div class="footer">
+          <p>
+            Say <a href="mailto:hello@matthewtse.xyz">hello@matthewtse.xyz</a><br />
+          </p>
+          <p>
+            Protrait images courtesy of <a href="https://anthonychan1211.github.io/">Anthony Photography</a></br>
+          </p>
+          <p>
+            Matthew Tse © 2017           
+          </p>
+        </div>
       </div>
     </div>
     <div class="clear"></div>
