Add Hero image and update text color

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </head>
 <body>
   <section id="intro" class="section-wrapper">
-    <div class="subsection intro">
+    <div class="subsection-hero intro">
       <div class="title">
         <div class="mainlogo">
             <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
@@ -66,18 +66,18 @@
             </svg>
         </div>
         <div>
-          <span class="letter--black blue" data-letter="M">M</span>
-          <span class="letter--black blue" data-letter="A">A</span>
-          <span class="letter--black blue" data-letter="T">T</span>
-          <span class="letter--black blue" data-letter="T">T</span>
-          <span class="letter--black blue" data-letter="H">H</span>
-          <span class="letter--black blue" data-letter="E">E</span>
-          <span class="letter-lifted--black blue" data-letter="W">W</span>
+          <span class="letter blue" data-letter="M">M</span>
+          <span class="letter blue" data-letter="A">A</span>
+          <span class="letter blue" data-letter="T">T</span>
+          <span class="letter blue" data-letter="T">T</span>
+          <span class="letter blue" data-letter="H">H</span>
+          <span class="letter blue" data-letter="E">E</span>
+          <span class="letter-lifted blue" data-letter="W">W</span>
         </div>
         <div>
-          <span class="letter--black blue" data-letter="T">T</span>
-          <span class="letter--black blue" data-letter="S">S</span>
-          <span class="letter-lifted--black blue" data-letter="E">E</span>
+          <span class="letter blue" data-letter="T">T</span>
+          <span class="letter blue" data-letter="S">S</span>
+          <span class="letter-lifted blue" data-letter="E">E</span>
         </div>
 
         <p class="typer" data-typer-targets='{"targets":[
@@ -274,7 +274,7 @@
             Protrait images courtesy of <a href="https://anthonychan1211.github.io/">Anthony Photography</a></br>
           </p>
           <p>
-            Matthew Tse © 2017           
+            Matthew Tse © 2017
           </p>
         </div>
       </div>
