Add open graph metadata tags
Add og image sizing metadata

--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
   <meta name="distribution" content="global">
   <meta name="classification" content="Matthew Tse is an IT strategist, with over 3 years of experience, including software engineering, project management, product development, business operations, and strategy.">
 
+  <meta property="og:title" content="Matthew Tse - Personal Website"/>
+  <meta property="og:url" content="http://matthewtse.xyz"/>
+  <meta property="og:image" content="http://i.imgur.com/fh21PJY.png"/>
+  <meta property="og:image:width" content="180"/>
+  <meta property="og:image:height" content="110"/>
+
   <!--Meta Tags for HTML pages on Mobile-->
   <meta name="format-detection" content="telephone=yes"/>
   <meta name="HandheldFriendly" content="true"/>
