Use bttn styling for project links

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
   <!--favicon end-->
   <!-- <link rel="stylesheet" href="assets/stylesheets/pesticide.css"> -->
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css" />
+  
   <!-- <link rel="stylesheet" type="text/css" href="assets/stylesheets/font-awesome.min.css" /> -->
 
 </head>
@@ -193,31 +194,31 @@
           <div class="work-title"><a>Scout</a></div>
           <div class="tag-line">Emotional Data Analytics</div>
           <div>
-              <div class="plink"><a href="https://github.com/jsshao/hackthevalley">Gitub</a></div>
-              <div class="plink"><a href="https://devpost.com/software/scout-rb3gej">Devpost</a></div>
+            <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://github.com/jsshao/hackthevalley">GITHUB</a></button>
+            <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://devpost.com/software/scout-rb3gej">DEVPOST</a></button>
           </div>
       </div>
       <div id="watchr" class="zoom">
           <div><a class="work-title">Watchr</a></div>
           <div class="tag-line">Real Time Crisis Management</div>
           <div>
-              <div class="plink"><a href="https://github.com/marwanad/Watchr">Gitub</a></div>
-              <div class="plink"><a href="https://devpost.com/software/watchr-1s3cqu">Devpost</a></div>
+              <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://github.com/marwanad/Watchr">GITHUB</a></button>
+              <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://devpost.com/software/watchr-1s3cqu">DEVPOST</a></button>
           </div>
       </div>
       <div id="findit" class="zoom">
           <div class="work-title"><a>FindIt</a></div>
           <div class="tag-line">Store Navigation Assistant</div>
           <div>
-              <div class="plink"><a href="https://github.com/mcotse/FindIt">Gitub</a></div>
-              <div class="plink"><a href="https://devpost.com/software/spotlight-ui82jm">Devpost</a></div>
+              <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://github.com/mcotse/FindIt">GITHUB</a></button>
+              <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://devpost.com/software/spotlight-ui82jm">DEVPOST</a></button>
           </div>
       </div>
       <div id="uwparkingbot" class="zoom">
           <div class="work-title"><a>UW Parking Bot</a></div>
           <div class="tag-line">Parking Availability Chatbot</div>
           <div>
-              <div class="plink"><a href="https://www.facebook.com/uwparkinglots/">Facebook</a></div>
+              <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://www.facebook.com/uwparkinglots/">FACEBOOK</a></button>
           </div>
       </div>
     </div>
@@ -290,6 +291,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <!-- <script src="https://cdn.jsdelivr.net/jquery.typeit/4.2.3/typeit.min.js"></script> -->
   <script src="assets/javascript/typer.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet">
+  
   <!-- <script src="assets/javascript/headroom.js"></script> -->
   <script src="assets/javascript/main.js"></script>
   <script src="assets/javascript/instaclick.js" data-no-instant></script>
