Add mobile styling for hero section to avoid overcrowding

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <!--favicon end-->
   <!-- <link rel="stylesheet" href="assets/stylesheets/pesticide.css"> -->
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css" />
-  
+
   <!-- <link rel="stylesheet" type="text/css" href="assets/stylesheets/font-awesome.min.css" /> -->
 
 </head>
@@ -81,6 +81,7 @@
           <span class="letter blue" data-letter="E">E</span>
           <span class="letter-lifted blue" data-letter="W">W</span>
         </div>
+        <div id="mobile-breakline"></div>
         <div>
           <span class="letter blue" data-letter="T">T</span>
           <span class="letter blue" data-letter="S">S</span>
@@ -292,7 +293,7 @@
   <!-- <script src="https://cdn.jsdelivr.net/jquery.typeit/4.2.3/typeit.min.js"></script> -->
   <script src="assets/javascript/typer.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet">
-  
+
   <!-- <script src="assets/javascript/headroom.js"></script> -->
   <script src="assets/javascript/main.js"></script>
   <script src="assets/javascript/instaclick.js" data-no-instant></script>
