Add Gesture to project section

--- a/index.html
+++ b/index.html
@@ -191,6 +191,14 @@
       </p>
     </div>
     <div class="subsection-orange">
+      <div id="gestur" class="zoom">
+          <div class="work-title"><a>Gestur</a></div>
+          <div class="tag-line">Sign Language Interpreter</div>
+          <div>
+              <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://github.com/k-yang/spartahack">GITHUB</a></button>
+              <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://devpost.com/software/gestur">DEVPOST</a></button>
+          </div>
+      </div>
       <div id="scout" class="zoom">
           <div class="work-title"><a>Scout</a></div>
           <div class="tag-line">Emotional Data Analytics</div>
@@ -205,14 +213,6 @@
           <div>
               <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://github.com/marwanad/Watchr">GITHUB</a></button>
               <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://devpost.com/software/watchr-1s3cqu">DEVPOST</a></button>
-          </div>
-      </div>
-      <div id="findit" class="zoom">
-          <div class="work-title"><a>FindIt</a></div>
-          <div class="tag-line">Store Navigation Assistant</div>
-          <div>
-              <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://github.com/mcotse/FindIt">GITHUB</a></button>
-              <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://devpost.com/software/spotlight-ui82jm">DEVPOST</a></button>
           </div>
       </div>
       <div id="uwparkingbot" class="zoom">
