Open social links in new tab

--- a/index.html
+++ b/index.html
@@ -106,22 +106,22 @@
       <div class="icons-list">
         <ul class='social'>
           <li class='linkedin'>
-            <a href="https://www.linkedin.com/in/mcotse?trk=nav_responsive_tab_profile">
+            <a target="_blank" href="https://www.linkedin.com/in/mcotse?trk=nav_responsive_tab_profile">
               <i class='fa fa-lg fa-linkedin'></i>
             </a>
           </li>
           <li class='github'>
-            <a href="https://github.com/mcotse">
+            <a target="_blank" href="https://github.com/mcotse">
               <i class='fa fa-lg fa-github'></i>
             </a>
           </li>
           <li class='instagram'>
-            <a href="https://www.instagram.com/itsmatthewtyo/">
+            <a target="_blank" href="https://www.instagram.com/itsmatthewtyo/">
               <i class='fa fa-lg fa-instagram'></i>
             </a>
           </li>
           <li class='facebook'>
-            <a href="https://www.facebook.com/mcotse">
+            <a target="_blank" href="https://www.facebook.com/mcotse">
               <i class='fa fa-lg fa-facebook-official'></i>
             </a>
           </li>
@@ -252,22 +252,22 @@
         <div class="icons-list">
           <ul class='social'>
             <li class='linkedin'>
-              <a href="https://www.linkedin.com/in/mcotse?trk=nav_responsive_tab_profile">
+              <a target="_blank" href="https://www.linkedin.com/in/mcotse?trk=nav_responsive_tab_profile">
                 <i class='fa fa-lg fa-linkedin'></i>
               </a>
             </li>
             <li class='github'>
-              <a href="https://github.com/mcotse">
+              <a target="_blank" href="https://github.com/mcotse">
                 <i class='fa fa-lg fa-github'></i>
               </a>
             </li>
             <li class='instagram'>
-              <a href="https://www.instagram.com/itsmatthewtyo/">
+              <a target="_blank" href="https://www.instagram.com/itsmatthewtyo/">
                 <i class='fa fa-lg fa-instagram'></i>
               </a>
             </li>
             <li class='facebook'>
-              <a href="https://www.facebook.com/mcotse">
+              <a target="_blank" href="https://www.facebook.com/mcotse">
                 <i class='fa fa-lg fa-facebook-official'></i>
               </a>
             </li>
