--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <div class="subtitle">
                 WHO I AM
             </div>
-            Current Computer Engineering Diciple @ uWaterloo class of '17</br>
+            Current computer engineering disciple @ uWaterloo class of '17</br>
             Past NLP engineer @ <a href="https://www.admithub.com/">Admithub</a>, Harvard Launch Lab.
             <br/>
             <br/>
