--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     <div class="subsection-white">
       <div class="contact">
         <div class="subtitle">
-          DATA-MINDING OPPORTUNITIES
+          DATA-MINING OPPORTUNITIES
         </div>
         <div class="text">
         </div>
